syntax = "proto3";

package sp.basic.help_define;

service HelpDefineService {
  rpc OrgDefineH (Empty) returns (Response);
  rpc ItemAllH (Empty) returns (Response);
  rpc CustAllH (Empty) returns (Response);
  rpc OrgDefineItemH (Empty) returns (Response);
  rpc OrgCodeHelpDefineItemH (Empty) returns (Response);
}



message EmptyResult { 
  string KeyItem1 = 1;
  string KeyItem2 = 2;
  string KeyItem3 = 3;
}
message Empty {
  EmptyResult result = 1;  
  map<string, string> metadata = 2;

}

message Response {
  bool success = 1;
  string message = 2;
  string data = 3; 
}
